crates/bc-cli/tests/cli/snapshots/cli__commodity__create_registers_a_new_commodity.snap
---
source: crates/bc-cli/tests/cli/commodity.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 CODE | NAME              | SYMBOL | DECIMALS | ISO | ALIASES
==============================================================
 AUD  | Australian Dollar | A$     | 2        | yes | AU$
------+-------------------+--------+----------+-----+---------
 BTC  | Bitcoin           | ₿      | 8        | no  |
------+-------------------+--------+----------+-----+---------
 ETH  | Ethereum          | ETH    | 9        | no  |
------+-------------------+--------+----------+-----+---------
 EUR  | Euro              | €      | 2        | yes |
------+-------------------+--------+----------+-----+---------
 GBP  | British Pound     | £      | 2        | yes |
------+-------------------+--------+----------+-----+---------
 INR  | Indian Rupee      | ₹      | 2        | yes |
------+-------------------+--------+----------+-----+---------
 JPY  | Japanese Yen      | ¥      | 0        | yes |
------+-------------------+--------+----------+-----+---------
 KRW  | Korean Won        | ₩      | 0        | yes |
------+-------------------+--------+----------+-----+---------
 SOL  | Solana            |        | 9        | no  |
------+-------------------+--------+----------+-----+---------
 USD  | US Dollar         | $      | 2        | yes | US$
----- stderr -----
