crates/bc-cli/tests/cli/snapshots/cli__commodity__create_rejects_a_conflicting_marker.snap
---
source: crates/bc-cli/tests/cli/commodity.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: marker conflict: 'btc' already maps to BTC
