crates/bc-cli/tests/cli/snapshots/cli__commodity__delete_json_reports_the_removed_commodity.snap
---
source: crates/bc-cli/tests/cli/commodity.rs
assertion_line: 278
expression: output
---
success: true
exit_code: 0
----- stdout -----
{
  "code": "DOGE",
  "id": "[COMMODITY_ID]"
}
----- stderr -----
