crates/bc-cli/tests/cli/snapshots/cli__commodity__delete_matches_a_code_case_insensitively.snap
---
source: crates/bc-cli/tests/cli/commodity.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Deleted commodity DOGE
----- stderr -----
