crates/bc-cli/tests/cli/snapshots/cli__commodity__delete_matches_an_alias_exactly.snap
---
source: crates/bc-cli/tests/cli/commodity.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Deleted commodity AUD
----- stderr -----
