crates/bc-cli/tests/cli/snapshots/cli__commodity__delete_reports_an_unknown_marker.snap
---
source: crates/bc-cli/tests/cli/commodity.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: no commodity matching 'NOPE'
