crates/bc-cli/tests/cli/snapshots/cli__commodity__list_json.snap
---
source: crates/bc-cli/tests/cli/commodity.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
[
  [
    "AUD",
    "Australian Dollar",
    "A$",
    "2",
    "yes",
    "AU$"
  ],
  [
    "BTC",
    "Bitcoin",
    "₿",
    "8",
    "no",
    ""
  ],
  [
    "ETH",
    "Ethereum",
    "ETH",
    "9",
    "no",
    ""
  ],
  [
    "EUR",
    "Euro",
    "€",
    "2",
    "yes",
    ""
  ],
  [
    "GBP",
    "British Pound",
    "£",
    "2",
    "yes",
    ""
  ],
  [
    "INR",
    "Indian Rupee",
    "₹",
    "2",
    "yes",
    ""
  ],
  [
    "JPY",
    "Japanese Yen",
    "¥",
    "0",
    "yes",
    ""
  ],
  [
    "KRW",
    "Korean Won",
    "₩",
    "0",
    "yes",
    ""
  ],
  [
    "USD",
    "US Dollar",
    "$",
    "2",
    "yes",
    "US$"
  ]
]
----- stderr -----
